--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <link href="/src/styles.scss" rel="stylesheet" />
+    <link href="/src/assets/scss/styles.scss" rel="stylesheet" />
   </head>
 
   <body>
